--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -21,6 +21,9 @@
 //Template scroll top button
 @import "vendor/scrolltop";
 
+@import "./node_modules/bootstrap/scss/bootstrap.scss";
+@import "./node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
+
 
 
 
