--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -22,7 +22,7 @@
 @import "vendor/scrolltop";
 
 @import "./node_modules/bootstrap/scss/bootstrap.scss";
-@import "./node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
+@import "./node_modules/font-awesome/scss/font-awesome";
 
 
 
