--- a/src/assets/sass/tools/contact-page/_contact.scss
+++ b/src/assets/sass/tools/contact-page/_contact.scss
@@ -36,9 +36,10 @@
         font-size: 16px;
         padding-left: 12px;
         padding-right: 12px;
-        &:first-child,
-        &:last-child {
+        &:first-child{
           padding-left: 0;
+        }
+        &:last-child {
           padding-right: 0;
         }
         a {
